# games_eng_cw

./: CMakeLists.txt  README.md
on_the_run/: Game.cpp  Game.h  Player.cpp  Player.h  Police.cpp  Police.h  main.cpp
res/Background/: tempBackground.png.url
res/player/: Player.png.url  Player.xcf  Player.xcf.url  PlayerMove.png.url  PlayerMove.xcf  PlayerMove.xcf.url  PlayerMovingSpriteSheet.png.url  PlayerMovingSpriteSheet.xcf  PlayerMovingSpriteSheet.xcf.url
res/police/: Police.png.url  Police.xcf  Police.xcf.url  PoliceMove.png.url  PoliceMove.xcf  PoliceMove.xcf.url  PoliceMovingSpriteSheet.png.url  PoliceMovingSpriteSheet.xcf  PoliceMovingSpriteSheet.xcf.url
